--- a/text.css
+++ b/text.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 800px) { /* FULLSCREEN DESKTOP*/
     .container img {
         max-width: 600px;
-        max-height: 500px;
+        max-height: 400px;
     }
     
 }
